--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -25,6 +25,7 @@ jobs:
           rev=$(git rev-parse --short HEAD)
           docker build . -t hello
           docker tag hello 244530008913.dkr.ecr.eu-west-1.amazonaws.com/glenn:$rev
+          docker tag hello 244530008913.dkr.ecr.eu-west-1.amazonaws.com/glenn:latest
           docker push 244530008913.dkr.ecr.eu-west-1.amazonaws.com/glenn:$rev
           docker push 244530008913.dkr.ecr.eu-west-1.amazonaws.com/glenn:latest
 
