--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -92,4 +92,4 @@ jobs:
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform apply -var="prefix=${GITHUB_REPOSITORY%/*}" -var="image=244530008913.dkr.ecr.eu-west-1.amazonaws.com/glenn:latest" -auto-approve
+        run: terraform apply -var="prefix=glennbech" -var="image=244530008913.dkr.ecr.eu-west-1.amazonaws.com/glenn:latest" -auto-approve
